--- a/main.ipynb
+++ b/main.ipynb
@@ -2,45 +2,277 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import catboost\n",
-    "import pandas as pd\n",
-    "import csv\n",
-    "\n",
-    "import lightgbm as lgb\n",
-    "import xgboost as xgb\n",
-    "import catboost as ctb\n",
-    "\n",
-    "from sklearn.preprocessing import OneHotEncoder, MinMaxScaler\n",
-    "from sklearn.model_selection import train_test_split"
+    "import pandas as pd"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Latence1</th>\n",
+       "      <th>Latence2</th>\n",
+       "      <th>Latence3</th>\n",
+       "      <th>CPU1</th>\n",
+       "      <th>RAM1</th>\n",
+       "      <th>CPU2</th>\n",
+       "      <th>RAM2</th>\n",
+       "      <th>CPU3</th>\n",
+       "      <th>RAM3</th>\n",
+       "      <th>Coord1</th>\n",
+       "      <th>Coord2</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0.168295</td>\n",
+       "      <td>0.250647</td>\n",
+       "      <td>0.175589</td>\n",
+       "      <td>0.36</td>\n",
+       "      <td>0.7</td>\n",
+       "      <td>0.30</td>\n",
+       "      <td>0.7</td>\n",
+       "      <td>0.80</td>\n",
+       "      <td>0.7</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0.110052</td>\n",
+       "      <td>0.242842</td>\n",
+       "      <td>0.097456</td>\n",
+       "      <td>0.69</td>\n",
+       "      <td>0.4</td>\n",
+       "      <td>0.50</td>\n",
+       "      <td>0.5</td>\n",
+       "      <td>0.17</td>\n",
+       "      <td>0.7</td>\n",
+       "      <td>1</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0.468962</td>\n",
+       "      <td>0.242266</td>\n",
+       "      <td>0.137896</td>\n",
+       "      <td>0.93</td>\n",
+       "      <td>0.6</td>\n",
+       "      <td>0.73</td>\n",
+       "      <td>0.7</td>\n",
+       "      <td>0.83</td>\n",
+       "      <td>0.7</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0.380637</td>\n",
+       "      <td>0.169424</td>\n",
+       "      <td>0.122439</td>\n",
+       "      <td>0.30</td>\n",
+       "      <td>0.7</td>\n",
+       "      <td>0.59</td>\n",
+       "      <td>0.4</td>\n",
+       "      <td>0.62</td>\n",
+       "      <td>0.4</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0.173749</td>\n",
+       "      <td>0.189239</td>\n",
+       "      <td>0.230444</td>\n",
+       "      <td>0.44</td>\n",
+       "      <td>0.7</td>\n",
+       "      <td>0.68</td>\n",
+       "      <td>0.3</td>\n",
+       "      <td>0.33</td>\n",
+       "      <td>0.4</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19995</th>\n",
+       "      <td>0.353395</td>\n",
+       "      <td>0.207639</td>\n",
+       "      <td>0.241753</td>\n",
+       "      <td>0.59</td>\n",
+       "      <td>0.4</td>\n",
+       "      <td>0.26</td>\n",
+       "      <td>0.3</td>\n",
+       "      <td>0.23</td>\n",
+       "      <td>0.4</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19996</th>\n",
+       "      <td>0.366271</td>\n",
+       "      <td>0.110511</td>\n",
+       "      <td>0.322599</td>\n",
+       "      <td>0.36</td>\n",
+       "      <td>0.3</td>\n",
+       "      <td>0.28</td>\n",
+       "      <td>0.4</td>\n",
+       "      <td>0.28</td>\n",
+       "      <td>0.7</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19997</th>\n",
+       "      <td>0.308927</td>\n",
+       "      <td>0.118603</td>\n",
+       "      <td>0.338697</td>\n",
+       "      <td>0.80</td>\n",
+       "      <td>0.3</td>\n",
+       "      <td>0.46</td>\n",
+       "      <td>0.3</td>\n",
+       "      <td>0.46</td>\n",
+       "      <td>0.3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19998</th>\n",
+       "      <td>0.294975</td>\n",
+       "      <td>0.206861</td>\n",
+       "      <td>0.164883</td>\n",
+       "      <td>0.71</td>\n",
+       "      <td>0.5</td>\n",
+       "      <td>0.18</td>\n",
+       "      <td>0.7</td>\n",
+       "      <td>0.79</td>\n",
+       "      <td>0.7</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19999</th>\n",
+       "      <td>0.490751</td>\n",
+       "      <td>0.246697</td>\n",
+       "      <td>0.363048</td>\n",
+       "      <td>0.61</td>\n",
+       "      <td>0.3</td>\n",
+       "      <td>0.77</td>\n",
+       "      <td>0.8</td>\n",
+       "      <td>0.23</td>\n",
+       "      <td>0.6</td>\n",
+       "      <td>4</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>20000 rows × 11 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       Latence1  Latence2  Latence3  CPU1  RAM1  CPU2  RAM2  CPU3  RAM3  \\\n",
+       "0      0.168295  0.250647  0.175589  0.36   0.7  0.30   0.7  0.80   0.7   \n",
+       "1      0.110052  0.242842  0.097456  0.69   0.4  0.50   0.5  0.17   0.7   \n",
+       "2      0.468962  0.242266  0.137896  0.93   0.6  0.73   0.7  0.83   0.7   \n",
+       "3      0.380637  0.169424  0.122439  0.30   0.7  0.59   0.4  0.62   0.4   \n",
+       "4      0.173749  0.189239  0.230444  0.44   0.7  0.68   0.3  0.33   0.4   \n",
+       "...         ...       ...       ...   ...   ...   ...   ...   ...   ...   \n",
+       "19995  0.353395  0.207639  0.241753  0.59   0.4  0.26   0.3  0.23   0.4   \n",
+       "19996  0.366271  0.110511  0.322599  0.36   0.3  0.28   0.4  0.28   0.7   \n",
+       "19997  0.308927  0.118603  0.338697  0.80   0.3  0.46   0.3  0.46   0.3   \n",
+       "19998  0.294975  0.206861  0.164883  0.71   0.5  0.18   0.7  0.79   0.7   \n",
+       "19999  0.490751  0.246697  0.363048  0.61   0.3  0.77   0.8  0.23   0.6   \n",
+       "\n",
+       "       Coord1  Coord2  \n",
+       "0           3       1  \n",
+       "1           1       5  \n",
+       "2           2       1  \n",
+       "3           0       0  \n",
+       "4           0       3  \n",
+       "...       ...     ...  \n",
+       "19995       0       3  \n",
+       "19996       3       1  \n",
+       "19997       0       5  \n",
+       "19998       0       2  \n",
+       "19999       4       4  \n",
+       "\n",
+       "[20000 rows x 11 columns]"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "df = pd.read_csv(\"./data/dataset.csv\")\n",
-    "hist = df.hist(bins=3)"
+    "df = pd.read_csv(\"./data/value.csv\", sep=\";\")\n",
+    "df\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
-  "language_info": {
-   "name": "python"
+  "kernelspec": {
+   "display_name": "Python 3.10.8 64-bit (microsoft store)",
+   "language": "python",
+   "name": "python3"
   },
-  "orig_nbformat": 4
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.8"
+  },
+  "orig_nbformat": 4,
+  "vscode": {
+   "interpreter": {
+    "hash": "1771f463adec221605ed8290eba291b36d26fe666ea33ff5fac3f1f0d3bf8b97"
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
