--- a/test/server.ipynb
+++ b/test/server.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,6 +57,64 @@
    ],
    "source": [
     "response = requests.get('http://localhost:50002/app/changezone?zone=1')\n",
+    "response.text"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "latencies= response.json\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'prev': [0.222222, 0.1253852, 0.4656122, 0.7846134, 0.4612456, 0.5651561]}\n"
+     ]
+    }
+   ],
+   "source": [
+    "import json\n",
+    "response = requests.get('http://localhost:50004/BDDMicroservice/getDB')\n",
+    "latencies= json.loads(response.text)\n",
+    "latency1= {\"prev\": latencies[0]}\n",
+    "latency2= latencies[0]\n",
+    "latency3= latencies[0]\n",
+    "\n",
+    "print(latency1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'insert ok'"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Node=1\n",
+    "valeur=0.222222\n",
+    "parameters = {'node': Node, 'moyenne': valeur}\n",
+    "response = requests.post('http://localhost:50004/BDDMicroservice/insert', json=parameters)\n",
     "response.text"
    ]
   },
